# synth_task

./: .env.example  .gitignore  CLAUDE.md  CONTRACT.md  DECISIONS.md  README.md  app.py  cli.py  config.py  insight_schema.json  pyproject.toml  schemas.py
analyze/: metrics.py
docs/: STATUS.md
docs/superpowers/plans/: 2026-06-09-skeleton-and-strava.md  2026-06-10-sheet-ingest-and-daily-join.md  2026-06-12-analyze-metrics-and-anomalies.md  2026-06-12-serving-layer-report-and-api.md  2026-06-12-synthesis-agent-loop.md
docs/superpowers/specs/: 2026-06-09-synth-mvp-design.md  2026-06-10-sheet-ingest-and-daily-join-design.md
ingest/: mapping.py  sheet.py  strava.py
normalize/: join.py
scripts/: gen_test_strava.py
security/: crypto.py
store/: db.py
synthesize/: agent.py  prompts.py  report.py  tools.py  validate.py
tests/: test_agent_loop.py  test_agent_tools.py  test_anomalies.py  test_app.py  test_crypto.py  test_db.py  test_insight_validation.py  test_join.py  test_metrics.py  test_metrics_store.py  test_prompts.py  test_report.py  test_sheet_parse.py  test_sheet_sync.py  test_splits.py  test_strava_fetch.py  test_strava_normalize.py  test_strava_oauth_redirect.py  test_strava_refresh.py  test_strava_token.py  test_sync_and_cli.py  test_wellness_mapping.py
tests/fixtures/: sheet_activities_sample.csv  sheet_wellness_sample.csv
