[project]
name = "synth-task"
version = "0.1.0"
description = "synth MVP — Strava + Google Sheet training-data synthesis (backend, local)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "openpyxl>=3.1",       # parse the local triathlon_sheet.xlsx fixture
    "anthropic>=0.40",     # synthesize/agent.py
    "jsonschema>=4.22",    # validate LLM output against insight_schema.json
]

[project.optional-dependencies]
# Live Google Sheets/Drive source (the .xlsx fixture path needs none of this).
sheets = [
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
]
dev = [
    "pytest>=8.2",
]

[project.scripts]
synth = "cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Flat layout: the contract refers to bare module paths (analyze/metrics.py,
# synthesize/prompts.py), so top-level packages live at the repo root.
[tool.setuptools]
py-modules = ["schemas", "cli", "app", "config"]
packages = ["ingest", "normalize", "store", "analyze", "synthesize"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
